enterprise/enterprise-template.yaml
---
# Source: anchore-engine/charts/anchore-feeds-db/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: anchore-anchore-feeds-db
  labels:
    app: anchore-feeds-db
    chart: anchore-feeds-db-1.0.1
    release: anchore
    heritage: Helm
spec:
  type: ClusterIP
  ports:
  - name: postgresql
    port: 5432
    targetPort: postgresql
  selector:
    app: anchore-feeds-db
    release: anchore
---
# Source: anchore-engine/charts/anchore-ui-redis/templates/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: anchore-anchore-ui-redis-headless
  namespace: default
  labels:
    app: anchore-ui-redis
    chart: anchore-ui-redis-10.7.16
    release: anchore
    heritage: Helm
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: redis
      port: 6379
      targetPort: redis
  selector:
    app: anchore-ui-redis
    release: anchore
---
# Source: anchore-engine/charts/anchore-ui-redis/templates/redis-master-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: anchore-anchore-ui-redis-master
  namespace: default
  labels:
    app: anchore-ui-redis
    chart: anchore-ui-redis-10.7.16
    release: anchore
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      targetPort: redis
  selector:
    app: anchore-ui-redis
    release: anchore
    role: master
---
# Source: anchore-engine/charts/postgresql/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: anchore-postgresql
  labels:
    app: postgresql
    chart: postgresql-1.0.1
    release: anchore
    heritage: Helm
spec:
  type: ClusterIP
  ports:
  - name: postgresql
    port: 5432
    targetPort: postgresql
  selector:
    app: postgresql
    release: anchore
---
# Source: anchore-engine/templates/api_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: anchore-anchore-engine-api
  labels:
    app: anchore-anchore-engine
    chart: anchore-engine-1.8.0
    release: anchore
    heritage: Helm
    component: api
spec:
  type: NodePort
  ports:
    - name: anchore-external-api
      port: 8228
      targetPort: 8228
      protocol: TCP
    - name: anchore-rbac-manager
      port: 8229
      targetPort: 8229
      protocol: TCP
    - name: reports-api
      port: 8558
      targetPort: 8558
      protocol: TCP
    - name: notifi-api
      port: 8668
      targetPort: 8668
      protocol: TCP
  selector:
    app: anchore-anchore-engine
    component: api
---
# Source: anchore-engine/templates/catalog_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: anchore-anchore-engine-catalog
  labels:
    app: anchore-anchore-engine
    chart: anchore-engine-1.8.0
    release: anchore
    heritage: Helm
    component: catalog
spec:
  type: ClusterIP
  ports:
    - name: anchore-catalog-api
      port: 8082
      targetPort: 8082
      protocol: TCP
  selector:
    app: anchore-anchore-engine
    component: catalog
---
# Source: anchore-engine/templates/enterprise_feeds_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: anchore-anchore-engine-enterprise-feeds
  labels:
    app: anchore-anchore-engine
    chart: anchore-engine-1.8.0
    release: anchore
    heritage: Helm
    component: enterprise-feeds
spec:
  type: ClusterIP
  ports:
    - name: feeds-api
      port: 8448
      targetPort: 8448
      protocol: TCP
  selector:
    app: anchore-anchore-engine
    component: enterprise-feeds
---
# Source: anchore-engine/templates/enterprise_ui_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: "anchore-anchore-engine-enterprise-ui"
  labels:
    app: anchore-anchore-engine
    component: enterprise-ui
    chart: anchore-engine-1.8.0
    release: anchore
    heritage: Helm
spec:
  sessionAffinity: ClientIP
  type: NodePort
  ports:
    - name: enterprise-ui
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: anchore-anchore-engine
    component: enterprise-ui
---
# Source: anchore-engine/templates/policy_engine_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: anchore-anchore-engine-policy
  labels:
    app: anchore-anchore-engine
    chart: anchore-engine-1.8.0
    release: anchore
    heritage: Helm
    component: policy
spec:
  type: ClusterIP
  ports:
    - name: anchore-policy-api
      port: 8087
      targetPort: 8087
      protocol: TCP
  selector:
    app: anchore-anchore-engine
    component: policy
---
# Source: anchore-engine/templates/simplequeue_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: anchore-anchore-engine-simplequeue
  labels:
    app: anchore-anchore-engine
    chart: anchore-engine-1.8.0
    release: anchore
    heritage: Helm
    component: simplequeue
spec:
  type: ClusterIP
  ports:
    - name: anchore-simplequeue-api
      port: 8083
      targetPort: 8083
      protocol: TCP
  selector:
    app: anchore-anchore-engine
    component: simplequeue
---
# Source: anchore-engine/charts/anchore-feeds-db/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anchore-anchore-feeds-db
  labels:
    app: anchore-feeds-db
    chart: anchore-feeds-db-1.0.1
    release: anchore
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: anchore-feeds-db
      release: anchore
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: anchore-feeds-db
        release: anchore
    spec:
      containers:
      - name: anchore-anchore-feeds-db
        image: "postgres:9.6.18"
        imagePullPolicy: ""
        args:
        ports:
        - name: postgresql
          containerPort: 5432
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - exec pg_isready --host $POD_IP
          initialDelaySeconds: 60
          timeoutSeconds: 5
          failureThreshold: 6
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - exec pg_isready --host $POD_IP
          initialDelaySeconds: 5
          timeoutSeconds: 3
          periodSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data/pgdata
          subPath: postgresql-db
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: anchore-anchore-feeds-db
---
# Source: anchore-engine/charts/postgresql/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anchore-postgresql
  labels:
    app: postgresql
    chart: postgresql-1.0.1
    release: anchore
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: postgresql
      release: anchore
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgresql
        release: anchore
    spec:
      containers:
      - name: anchore-postgresql
        image: "postgres:9.6.18"
        imagePullPolicy: ""
        args:
        ports:
        - name: postgresql
          containerPort: 5432
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - exec pg_isready --host $POD_IP
          initialDelaySeconds: 60
          timeoutSeconds: 5
          failureThreshold: 6
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - exec pg_isready --host $POD_IP
          initialDelaySeconds: 5
          timeoutSeconds: 3
          periodSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data/pgdata
          subPath: postgresql-db
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: anchore-postgresql
---
# Source: anchore-engine/templates/analyzer_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anchore-anchore-engine-analyzer
  labels:
    app: anchore-anchore-engine
    chart: anchore-engine-1.8.0
    release: anchore
    heritage: Helm
    component: analyzer
spec:
  selector:
    matchLabels:
      app: anchore-anchore-engine
      component: analyzer
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  template:
    metadata:
      labels:
        app: anchore-anchore-engine
        component: analyzer
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      imagePullSecrets:
      - name: anchore-enterprise-pullcreds
      containers:
      - name: anchore-engine-analyzer
        image: docker.io/anchore/enterprise:v2.3.2
        imagePullPolicy: IfNotPresent
        args: ["anchore-enterprise-manager", "service", "start", "--no-auto-upgrade", "analyzer"]
        ports:
        - name: analyzer-api
          containerPort: 8084
        volumeMounts:
        - name: anchore-license
          mountPath: /home/anchore/license.yaml
          subPath: license.yaml
        - name: analyzer-config-volume
          mountPath: /anchore_service/analyzer_config.yaml
          subPath: analyzer_config.yaml
        - name: config-volume
          mountPath: /config/config.yaml
          subPath: config.yaml
        - name: analyzer-scratch
          mountPath: /analysis_scratch
        livenessProbe:
          httpGet:
            path: /health
            port: analyzer-api
          initialDelaySeconds: 120
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 6
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /health
            port: analyzer-api
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        resources:
          
          null
      volumes:
        - name: anchore-license
          secret:
            secretName: anchore-enterprise-license
        - name: config-volume
          configMap:
            name: anchore-anchore-engine
        - name: analyzer-scratch
          
          emptyDir: {}
        - name: analyzer-config-volume
          configMap:
            name: anchore-anchore-engine-analyzer
---
# Source: anchore-engine/templates/api_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anchore-anchore-engine-api
  labels:
    app: anchore-anchore-engine
    component: api
    chart: anchore-engine-1.8.0
    release: anchore
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: anchore-anchore-engine
      component: api
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  template:
    metadata:
      labels:
        app: anchore-anchore-engine
        component: api
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      imagePullSecrets:
      - name: anchore-enterprise-pullcreds
      containers:
      - name: "anchore-engine-api"
        image: docker.io/anchore/enterprise:v2.3.2
        imagePullPolicy: IfNotPresent
        args: ["anchore-enterprise-manager", "service", "start", "--no-auto-upgrade", "apiext"]
        ports:
        - containerPort: 8228
          name: external-api
        volumeMounts:
        - name: anchore-license
          mountPath: /home/anchore/license.yaml
          subPath: license.yaml
        - name: config-volume
          mountPath: /config/config.yaml
          subPath: config.yaml
        livenessProbe:
          httpGet:
            path: /health
            port: external-api
          initialDelaySeconds: 120
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 6
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /health
            port: external-api
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        resources:
          
          null
      - name: anchore-engine-rbac-manager
        image: docker.io/anchore/enterprise:v2.3.2
        imagePullPolicy: IfNotPresent
        args: ["anchore-enterprise-manager", "service", "start", "--no-auto-upgrade", "rbac_manager"]
        ports:
        - containerPort: 8229
          name: rbac-manager
        volumeMounts:
        - name: anchore-license
          mountPath: /home/anchore/license.yaml
          subPath: license.yaml
        - name: enterprise-config-volume
          mountPath: /config/config.yaml
          subPath: config.yaml
        livenessProbe:
          httpGet:
            path: /health
            port: rbac-manager
          initialDelaySeconds: 120
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 6
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /health
            port: rbac-manager
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        resources:
          
          null
      - name: anchore-engine-rbac-authorizer
        image: docker.io/anchore/enterprise:v2.3.2
        imagePullPolicy: IfNotPresent
        args: ["anchore-enterprise-manager", "service", "start", "--no-auto-upgrade", "rbac_authorizer"]
        ports:
        - containerPort: 8089
          name: rbac-auth
        volumeMounts:
        - name: anchore-license
          mountPath: /home/anchore/license.yaml
          subPath: license.yaml
        - name: enterprise-config-volume
          mountPath: /config/config.yaml
          subPath: config.yaml
        livenessProbe:
          exec:
            command:
              - curl
              - -f
              - 'localhost:8089/health'
          initialDelaySeconds: 120
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 6
          successThreshold: 1
        readinessProbe:
          exec:
            command:
              - curl
              - -f
              - 'localhost:8089/health'
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        resources:
          
          null
      - name: "anchore-engine-reports"
        image: docker.io/anchore/enterprise:v2.3.2
        imagePullPolicy: IfNotPresent
        args: ["anchore-enterprise-manager", "service", "start", "--no-auto-upgrade", "reports"]
        ports:
        - containerPort: 8558
          name: reports-api
        volumeMounts:
        - name: enterprise-config-volume
          mountPath: /config/config.yaml
          subPath: config.yaml
        - name: anchore-license
          mountPath: /home/anchore/license.yaml
          subPath: license.yaml
        livenessProbe:
          httpGet:
            path: /health
            port: reports-api
          initialDelaySeconds: 120
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 6
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /health
            port: reports-api
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        resources:
          
          null
      - name: "anchore-engine-notifications"
        image: docker.io/anchore/enterprise:v2.3.2
        imagePullPolicy: IfNotPresent
        args: ["anchore-enterprise-manager", "service", "start", "--no-auto-upgrade", "notifications"]
        ports:
        - containerPort: 8668
          name: notifi-api
        volumeMounts:
        - name: enterprise-config-volume
          mountPath: /config/config.yaml
          subPath: config.yaml
        - name: anchore-license
          mountPath: /home/anchore/license.yaml
          subPath: license.yaml
        livenessProbe:
          httpGet:
            path: /health
            port: notifi-api
          initialDelaySeconds: 120
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 6
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /health
            port: notifi-api
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        resources:
          
          null
      volumes:
        - name: config-volume
          configMap:
            name: anchore-anchore-engine
        
        - name: anchore-license
          secret:
            secretName: anchore-enterprise-license
        - name: enterprise-config-volume
          configMap:
            name: anchore-anchore-engine-enterprise
---
# Source: anchore-engine/templates/catalog_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anchore-anchore-engine-catalog
  labels:
    app: anchore-anchore-engine
    chart: anchore-engine-1.8.0
    release: anchore
    heritage: Helm
    component: catalog
spec:
  selector:
    matchLabels:
      app: anchore-anchore-engine
      component: catalog
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  template:
    metadata:
      labels:
        app: anchore-anchore-engine
        component: catalog
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      imagePullSecrets:
      - name: anchore-enterprise-pullcreds
      containers:
      - name: anchore-engine-catalog
        image: docker.io/anchore/enterprise:v2.3.2
        imagePullPolicy: IfNotPresent
        args: ["anchore-enterprise-manager", "service", "start", "--no-auto-upgrade", "catalog"]
        ports:
        - name: catalog
          containerPort: 8082
        volumeMounts:
        - name: anchore-license
          mountPath: /home/anchore/license.yaml
          subPath: license.yaml
        - name: config-volume
          mountPath: /config/config.yaml
          subPath: config.yaml
        livenessProbe:
          httpGet:
            path: /health
            port: catalog
          initialDelaySeconds: 120
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 6
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /health
            port: catalog
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        resources:
          
          null
      volumes:
        - name: anchore-license
          secret:
            secretName: anchore-enterprise-license
        - name: config-volume
          configMap:
            name: anchore-anchore-engine
---
# Source: anchore-engine/templates/enterprise_feeds_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anchore-anchore-engine-enterprise-feeds
  labels:
    app: anchore-anchore-engine
    component: enterprise-feeds
    chart: anchore-engine-1.8.0
    release: anchore
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: anchore-anchore-engine
      component: enterprise-feeds
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  template:
    metadata:
      labels:
        app: anchore-anchore-engine
        component: enterprise-feeds
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      imagePullSecrets:
      - name: anchore-enterprise-pullcreds
      containers:
      - name: "anchore-engine-enterprise-feeds"
        image: docker.io/anchore/enterprise:v2.3.2
        imagePullPolicy: IfNotPresent
        args: ["anchore-enterprise-manager", "service", "start", "--no-auto-upgrade", "feeds"]
        ports:
        - containerPort: 8448
          name: feeds-api
        volumeMounts:
        - name: config-volume
          mountPath: /config/config.yaml
          subPath: config.yaml
        - name: enterprise-feeds-scratch
          mountPath: /analysis_scratch
        - name: anchore-license
          mountPath: /home/anchore/license.yaml
          subPath: license.yaml
        livenessProbe:
          httpGet:
            path: /health
            port: feeds-api
          initialDelaySeconds: 120
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 6
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /health
            port: feeds-api
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        resources:
          
          null
      volumes:
        - name: config-volume
          configMap:
            name: anchore-anchore-engine-enterprise-feeds
        - name: enterprise-feeds-scratch
          
          emptyDir: {}
        - name: anchore-license
          secret:
            secretName: anchore-enterprise-license
---
# Source: anchore-engine/templates/enterprise_ui_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anchore-anchore-engine-enterprise-ui
  labels:
    app: anchore-anchore-engine
    component: enterprise-ui
    chart: anchore-engine-1.8.0
    release: anchore
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: anchore-anchore-engine
      component: enterprise-ui
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  template:
    metadata:
      labels:
        app: anchore-anchore-engine
        component: enterprise-ui
        chart: "anchore-engine-1.8.0"
        release: anchore
        heritage: Helm
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      imagePullSecrets:
      - name: anchore-enterprise-pullcreds
      containers:
      - name: "anchore-engine-enterprise-ui"
        image: docker.io/anchore/enterprise-ui:v2.3.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          protocol: TCP
          name: enterprise-ui
        volumeMounts:
        - name: anchore-license
          mountPath: /home/anchore/license.yaml
          subPath: license.yaml
        - name: anchore-ui-config
          mountPath: /config/config-ui.yaml
          subPath: config-ui.yaml
        livenessProbe:
          tcpSocket:
            port: enterprise-ui
          initialDelaySeconds: 120
          periodSeconds: 10
          failureThreshold: 6
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /service/health
            port: enterprise-ui
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        resources:
          
          null
      volumes:
      - name: anchore-license
        secret:
          secretName: anchore-enterprise-license
      - name: anchore-ui-config
        secret:
          secretName: anchore-anchore-engine-enterprise-ui
---
# Source: anchore-engine/templates/policy_engine_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anchore-anchore-engine-policy
  labels:
    app: anchore-anchore-engine
    chart: anchore-engine-1.8.0
    release: anchore
    heritage: Helm
    component: policy
spec:
  selector:
    matchLabels:
      app: anchore-anchore-engine
      component: policy
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  template:
    metadata:
      labels:
        app: anchore-anchore-engine
        component: policy
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      imagePullSecrets:
      - name: anchore-enterprise-pullcreds
      containers:
      - name: anchore-engine-policy
        image: docker.io/anchore/enterprise:v2.3.2
        imagePullPolicy: IfNotPresent
        args: ["anchore-enterprise-manager", "service", "start", "--no-auto-upgrade", "policy_engine"]
        ports:
        - name: policy
          containerPort: 8087
        volumeMounts:
        - name: anchore-license
          mountPath: /home/anchore/license.yaml
          subPath: license.yaml
        - name: config-volume
          mountPath: /config/config.yaml
          subPath: config.yaml
        - name: policy-scratch
          mountPath: /analysis_scratch
        livenessProbe:
          httpGet:
            path: /health
            port: policy
          initialDelaySeconds: 120
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 6
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /health
            port: policy
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        resources:
          
          null
      volumes:
        - name: anchore-license
          secret:
            secretName: anchore-enterprise-license
        - name: config-volume
          configMap:
            name: anchore-anchore-engine
        - name: policy-scratch
          
          emptyDir: {}
---
# Source: anchore-engine/templates/simplequeue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anchore-anchore-engine-simplequeue
  labels:
    app: anchore-anchore-engine
    chart: anchore-engine-1.8.0
    release: anchore
    heritage: Helm
    component: simplequeue
spec:
  selector:
    matchLabels:
      app: anchore-anchore-engine
      component: simplequeue
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  template:
    metadata:
      labels:
        app: anchore-anchore-engine
        component: simplequeue
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      imagePullSecrets:
      - name: anchore-enterprise-pullcreds
      containers:
      - name: "anchore-engine-simplequeue"
        image: docker.io/anchore/enterprise:v2.3.2
        imagePullPolicy: IfNotPresent
        args: ["anchore-enterprise-manager", "service", "start", "--no-auto-upgrade", "simplequeue"]
        ports:
        - name: simplequeue
          containerPort: 8083
        volumeMounts:
        - name: anchore-license
          mountPath: /home/anchore/license.yaml
          subPath: license.yaml
        - name: config-volume
          mountPath: /config/config.yaml
          subPath: config.yaml
        livenessProbe:
          httpGet:
            path: /health
            port: simplequeue
          initialDelaySeconds: 120
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 6
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /health
            port: simplequeue
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        resources:
          
          null
      volumes:
        - name: anchore-license
          secret:
            secretName: anchore-enterprise-license
        - name: config-volume
          configMap:
            name: anchore-anchore-engine
---
# Source: anchore-engine/charts/anchore-ui-redis/templates/redis-master-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: anchore-anchore-ui-redis-master
  namespace: default
  labels:
    app: anchore-ui-redis
    chart: anchore-ui-redis-10.7.16
    release: anchore
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: anchore-ui-redis
      release: anchore
      role: master
  serviceName: anchore-anchore-ui-redis-headless
  template:
    metadata:
      labels:
        app: anchore-ui-redis
        chart: anchore-ui-redis-10.7.16
        release: anchore
        role: master
      annotations:
        checksum/health: 294e3b88cf383f67dd68a761527b323dbda674f7d4e1512401ebfa30b11bbf95
        checksum/configmap: 598805618acbd48a08f2c4be579bb6c4d4805548a3adf8772bab797d41ee731c
        checksum/secret: 6a534d15ec8e63bd353c6374a30ca914e884bb146c685cc0c840ff55c4461c0a
    spec:
      
      securityContext:
        fsGroup: 1001
      serviceAccountName: default
      containers:
        - name: anchore-ui-redis
          image: docker.io/bitnami/redis:6.0.6-debian-10-r10
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 1001
          command:
            - /bin/bash
            - -c
            - |
              if [[ -n $REDIS_PASSWORD_FILE ]]; then
                password_aux=`cat ${REDIS_PASSWORD_FILE}`
                export REDIS_PASSWORD=$password_aux
              fi
              if [[ ! -f /opt/bitnami/redis/etc/master.conf ]];then
                cp /opt/bitnami/redis/mounted-etc/master.conf /opt/bitnami/redis/etc/master.conf
              fi
              if [[ ! -f /opt/bitnami/redis/etc/redis.conf ]];then
                cp /opt/bitnami/redis/mounted-etc/redis.conf /opt/bitnami/redis/etc/redis.conf
              fi
              ARGS=("--port" "${REDIS_PORT}")
              ARGS+=("--requirepass" "${REDIS_PASSWORD}")
              ARGS+=("--masterauth" "${REDIS_PASSWORD}")
              ARGS+=("--include" "/opt/bitnami/redis/etc/redis.conf")
              ARGS+=("--include" "/opt/bitnami/redis/etc/master.conf")
              /run.sh ${ARGS[@]}
          ports:
            - name: redis
              containerPort: 6379
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
            exec:
              command:
                - sh
                - -c
                - /health/ping_liveness_local.sh 5
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 5
            exec:
              command:
                - sh
                - -c
                - /health/ping_readiness_local.sh 5
          resources:
            null
          volumeMounts:
            - name: health
              mountPath: /health
            - name: redis-data
              mountPath: /data
              subPath: 
            - name: config
              mountPath: /opt/bitnami/redis/mounted-etc
            - name: redis-tmp-conf
              mountPath: /opt/bitnami/redis/etc/
      volumes:
        - name: health
          configMap:
            name: anchore-anchore-ui-redis-health
            defaultMode: 0755
        - name: config
          configMap:
            name: anchore-anchore-ui-redis
        - name: redis-tmp-conf
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: redis-data
        labels:
          app: anchore-ui-redis
          release: anchore
          heritage: Helm
          component: master
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
        
        selector:
  updateStrategy:
    type: RollingUpdate
---
# Source: anchore-engine/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: anchore-anchore-engine
  labels:
    app: anchore-anchore-engine
    chart: anchore-engine-1.8.0
    release: anchore
    heritage: Helm
  annotations:
    
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: "anchore-api.jvalancelabs.com"
      http:
        paths:
        - path: /v1/
          backend:
            serviceName: anchore-anchore-engine-api
            servicePort: 8228
    - host: "anchore-ui.jvalancelabs.com"
      http:
        paths:
        - path: /
          backend:
            serviceName: anchore-anchore-engine-enterprise-ui
            servicePort: 80
